--- a/Swarm/AWS/README
+++ b/Swarm/AWS/README
@@ -1,1 +1,2 @@
-cd && git clone https://github.com/secobau/ucp.git && sudo docker stack deploy -c ucp/aws/php.yml php && sudo docker stack deploy -c ucp/aws/dockercoins.yml dockercoins
+git clone https://github.com/secobau/docker.git && chmod +x docker/Swarm/AWS/install/swarm.sh && ./docker/Swarm/AWS/install/swarm.sh && rm -rf docker
+git clone https://github.com/secobau/ucp.git && sudo docker stack deploy -c ucp/aws/php.yml php && sudo docker stack deploy -c ucp/aws/dockercoins.yml dockercoins
