--- a/Swarm/AWS/README
+++ b/Swarm/AWS/README
@@ -6,4 +6,4 @@ export stack=$stack && git clone https://github.com/secobau/docker.git && chmod 
 export stack=$stack && git clone https://github.com/secobau/docker.git && chmod +x docker/Swarm/AWS/app/remove.sh && ./docker/Swarm/AWS/app/remove.sh ; rm -rf docker
 
 # FROM SWARM MANAGER INSTANCE
-cd && git clone https://github.com/secobau/docker.git && sudo docker stack deploy -c docker/Swarm/AWS/app/php.yml php && sudo docker stack deploy -c docker/Swarm/AWS/app/dockercoins.yml dockercoins
+cd && git clone https://github.com/secobau/docker.git && sudo docker stack deploy --compose-file docker/Swarm/AWS/app/php.yml php && sudo docker stack deploy --compose-file docker/Swarm/AWS/app/dockercoins.yml dockercoins
